--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "curso node",
   "main": "teste.js",
   "scripts": {
-    "start": "node teste.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
