--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "curso node",
   "main": "teste.js",
   "scripts": {
+    "dev": "npx nodemon app.js",
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/LuisFernandoFarias/curso_node#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
