--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "main": "teste.js",
   "scripts": {
-    "dev": "npx nodemon app.js",
+    "dev": "npx nodemon src/app.js",
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:fix": "npx eslint ./src --ext .js --fix --ignore-path ./.gitignore",
+    "lint:format": "npx prettier --log-level warn --write \"./src/**/*.{js,ts}\" ",
+    "lint": "npm run lint:format && npm run lint:fix"
   },
   "repository": {
     "type": "git",
@@ -20,9 +22,15 @@
   },
   "homepage": "https://github.com/LuisFernandoFarias/curso_node#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "eslint": "^8.46.0",
+    "express": "^4.18.2",
+    "prettier": "^3.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "nodemon": "^3.0.1",
+    "pre-commit": "^1.2.2"
+  },
+  "pre-commit": "lint"
 }
