feat: create routers

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,12 @@
 {
-    "extends":["eslint:recommended", "plugin:node/recommended"],
-    "plugins": ["prettier"],
-    "rules": {
-        "prettier/prettier": "error"
-    }
+  "extends": [
+    "eslint:recommended",
+    "plugin:node/recommended"
+  ],
+  "plugins": [
+    "prettier"
+  ],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
