--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "homepage": "https://github.com/LuisFernandoFarias/curso_node#readme",
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "eslint": "^8.46.0",
     "express": "^4.18.2",
-    "prettier": "^3.0.1"
+    "pg": "^8.11.2",
+    "prettier": "^3.0.1",
+    "prisma": "^5.1.1"
   },
   "devDependencies": {
     "eslint-plugin-node": "^11.1.0",
