--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
