--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "curso node",
   "main": "teste.js",
   "scripts": {
-    "dev": "npx ts-node-dev --respawn --inspect --ignore-watch node_modules src/app.ts",
+    "dev": "npx ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/app.ts",
     "start": "node src/app.ts",
     "lint:fix": "npx eslint ./src --ext .ts --fix --ignore-path ./.gitignore",
     "lint:format": "npx prettier --log-level warn --write \"./src/**/*.{js,ts}\" ",
@@ -36,7 +36,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
     "pre-commit": "^1.2.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0"
   },
   "pre-commit": "lint"
 }
